@@ -1,10 +1,0 @@
-Glade is a free user interface builder for GTK+ and GNOME. After designing a
-user interface with glade-2 the layout and configuration are saved in an XML
-file. libglade is a library which knows how to build and hook up the user
-interface described in the Glade XML file at application run time.
-
-This extension module binds libglade to Perl so you can create and manipulate
-user interfaces in Perl code in conjunction with Gtk2 and even Gnome2. Better
-yet you can load a file's contents into a PERL scalar do a few magical regular
-expressions to customize things and the load up the app. It doesn't get any
-easier.
