@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 10:16:42 nia Exp $
-
-BLAKE2s (Gtk2-GladeXML-1.007.tar.gz) = 904b5cff93e0c72255022126d64cdc77987beb71edfc767fab67f36ffae68444
-SHA512 (Gtk2-GladeXML-1.007.tar.gz) = e40b859e76f99c5c9497e0c123679c916b3f5615aaeb208f56a9a4758a2a8a5d5078d4bf7b441ffc6080162a04bb146739457bbd71e4a443a2d092ddbb1ed94f
-Size (Gtk2-GladeXML-1.007.tar.gz) = 38496 bytes
